# gisindia

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/gisindia/: __init__.py
src/gisindia/update_sot/: update_sot.py
src/gisindia/update_sot/regionIDs/: README.MD  regionIDs.csv
src/gisindia/update_sot/regionIDs/regionIDs_src/: ulbs.csv
src/gisindia/update_sot/regionIDs/regionIDs_src/ulbs/: ulb_251528.csv  ulb_276600.csv  ulbs.csv
src/gisindia/update_sot/regionIDs/regionIDs_src/villages/: state_29.csv
src/gisindia/update_sot/regionIDs/regionIDs_src/wards/: ulb_251528.csv
tests/: test_gisindia.py
