[tool.poetry]
name = "gisindia"
version = "0.1.0"
description = "Package to deal with different kinds of geospatial data"
authors = ["Sneha S"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
